--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ include(${CMAKE_SOURCE_DIR}/query_processor.cmake)
 #include(${CMAKE_SOURCE_DIR}/data_movement.cmake)
 #include(${CMAKE_SOURCE_DIR}/data_replication.cmake)
 include(${CMAKE_SOURCE_DIR}/data_retention.cmake)
-#include(${CMAKE_SOURCE_DIR}/data_verification.cmake)
+include(${CMAKE_SOURCE_DIR}/data_verification.cmake)
 #include(${CMAKE_SOURCE_DIR}/event_handler_data_object_modified.cmake)
 
 include(CPack)
