--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,15 +94,7 @@ include(${CMAKE_SOURCE_DIR}/data_movement.cmake)
 include(${CMAKE_SOURCE_DIR}/data_replication.cmake)
 include(${CMAKE_SOURCE_DIR}/data_retention.cmake)
 include(${CMAKE_SOURCE_DIR}/data_verification.cmake)
-#include(${CMAKE_SOURCE_DIR}/event_handler_data_object_modified.cmake)
+include(${CMAKE_SOURCE_DIR}/testing_policy.cmake)
+include(${CMAKE_SOURCE_DIR}/event_handler_data_object_modified.cmake)
 
 include(CPack)
-
-
-
-
-
-
-
-
-
