--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,5 +96,6 @@ include(${CMAKE_SOURCE_DIR}/data_retention.cmake)
 include(${CMAKE_SOURCE_DIR}/data_verification.cmake)
 include(${CMAKE_SOURCE_DIR}/testing_policy.cmake)
 include(${CMAKE_SOURCE_DIR}/event_handler_data_object_modified.cmake)
+include(${CMAKE_SOURCE_DIR}/event_handler_metadata_modified.cmake)
 
 include(CPack)
